<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingStart="@dimen/general.distance.32dp"
            android:paddingEnd="@dimen/general.distance.xsmall">

            <TextView
                android:id="@+id/rangeSettingsLowLabel"
                style="@style/Settings.Range.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general.distance.xsmall"
                android:text="@string/rangeinfo.low"
                app:layout_constraintEnd_toStartOf="@+id/rangeSettingsLowIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rangeSettingsLowDescription"
                style="@style/Settings.Range.Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general.distance.mini"
                app:layout_constraintEnd_toStartOf="@+id/rangeSettingsLowIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rangeSettingsLowLabel"
                tools:text="From 0 to 119 umol/L" />

            <com.aptatek.pkulab.widget.LevelIndicatorView
                android:id="@+id/rangeSettingsLowIndicator"
                android:layout_width="@dimen/general.distance.32dp"
                android:layout_height="@dimen/general.distance.32dp"
                app:indicatorColor="@color/pkuLevelStandard"
                app:layout_constraintBottom_toBottomOf="@+id/rangeSettingsLowDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rangeSettingsLowLabel"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/rangeSettingsNormalLabel"
                style="@style/Settings.Range.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general.distance.36dp"
                android:text="@string/rangeinfo.normal"
                app:layout_constraintEnd_toStartOf="@+id/rangeSettingIncreasedIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rangeSettingsLowDescription" />

            <com.aptatek.pkulab.widget.LevelIndicatorView
                android:id="@+id/rangeSettingIncreasedIndicator"
                android:layout_width="@dimen/general.distance.32dp"
                android:layout_height="@dimen/general.distance.32dp"
                app:indicatorColor="@color/pkuLevelIncreased"
                app:layout_constraintBottom_toBottomOf="@+id/rangeSettingsIncreasedDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rangeSettingsNormalLabel"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/rangeSettingsIncreasedDescription"
                style="@style/Settings.Range.Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general.distance.mini"
                app:layout_constraintEnd_toStartOf="@+id/rangeSettingsLowIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rangeSettingsNormalLabel"
                tools:text="From 0 to 119 umol/L" />


            <TextView
                android:id="@+id/rangeSettingsHighLabel"
                style="@style/Settings.Range.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general.distance.36dp"
                android:text="@string/rangeinfo.high"
                app:layout_constraintEnd_toStartOf="@+id/rangeSettingsHighIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rangeSettingsIncreasedDescription" />

            <TextView
                android:id="@+id/rangeSettingsHighDescription"
                style="@style/Settings.Range.Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general.distance.mini"
                app:layout_constraintEnd_toStartOf="@+id/rangeSettingsHighIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rangeSettingsHighLabel"
                tools:text="From 361 to 510 umol/L" />

            <com.aptatek.pkulab.widget.LevelIndicatorView
                android:id="@+id/rangeSettingsHighIndicator"
                android:layout_width="@dimen/general.distance.32dp"
                android:layout_height="@dimen/general.distance.32dp"
                app:indicatorColor="@color/pkuLevelHigh"
                app:layout_constraintBottom_toBottomOf="@+id/rangeSettingsHighDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rangeSettingsHighLabel"
                app:layout_constraintVertical_bias="0.5" />


            <TextView
                android:id="@+id/rangeSettingsVeryHighLabel"
                style="@style/Settings.Range.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general.distance.36dp"
                android:text="@string/rangeinfo.very.high"
                app:layout_constraintEnd_toStartOf="@+id/rangeSettingsVeryHighIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rangeSettingsHighDescription" />

            <TextView
                android:id="@+id/rangeSettingsVeryHighDescription"
                style="@style/Settings.Range.Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general.distance.mini"
                app:layout_constraintEnd_toStartOf="@+id/rangeSettingsVeryHighIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rangeSettingsVeryHighLabel"
                tools:text="Over 511 umol/L" />

            <com.aptatek.pkulab.widget.LevelIndicatorView
                android:id="@+id/rangeSettingsVeryHighIndicator"
                android:layout_width="@dimen/general.distance.32dp"
                android:layout_height="@dimen/general.distance.32dp"
                app:indicatorColor="@color/pkuLevelVeryHigh"
                app:layout_constraintBottom_toBottomOf="@+id/rangeSettingsVeryHighDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rangeSettingsVeryHighLabel"
                app:layout_constraintVertical_bias="0.5" />


            <TextView
                android:id="@+id/rangeSettingsUnitLabel"
                style="@style/Settings.Range.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general.distance.36dp"
                android:text="@string/settings.units.label"
                app:layout_constraintEnd_toStartOf="@+id/rangeSettingsVeryHighIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rangeSettingsVeryHighDescription" />

            <RadioGroup
                android:id="@+id/rangeSettingsUnitsGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general.distance.mini"
                android:layout_marginBottom="@dimen/general.distance.small"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rangeSettingsUnitLabel">

                <RadioButton
                    android:id="@+id/rangeSettingsUnitMicroMol"
                    style="@style/Settings.Range.Units.Radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/rangeinfo.pkulevel.mmol" />

                <RadioButton
                    android:id="@+id/rangeSettingsUnitMilliGram"
                    style="@style/Settings.Range.Units.Radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/rangeinfo.pkulevel.mg" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>